WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233528
[MSE] Fix erase range to prevent accidental deletion in files with changing durations
https://bugs.webkit.org/show_bug.cgi?id=233528
Summary
[MSE] Fix erase range to prevent accidental deletion in files with changing d...
Alicia Boya García
Reported
2021-11-26 12:53:33 PST
In didReceiveSample(), eraseBeginTime was being set to highestPresentationTimestamp minus a tolerance. The tolerance is not needed since highestPresentationTimestamp is loaded from exact frame timestamps, and can cause accidental frame erasure in situations where there are frames with frames smaller than the tolerance, which is the case for certain MP4 files. Test: media/media-source/media-source-append-tiny-durations.html
Attachments
Patch
(8.00 KB, patch)
2021-11-26 12:57 PST
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2021-11-26 12:57:02 PST
Created
attachment 445208
[details]
Patch
EWS
Comment 2
2021-12-03 00:25:24 PST
Committed
r286485
(
244824@main
): <
https://commits.webkit.org/244824@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445208
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug